<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/color_button2"
        android:text="@string/score"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttons" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/color_button"
        android:text="@string/pause"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttons" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/newGame"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:backgroundTint="@color/color_button"
            android:text="@string/new_game"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/resume"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/newGame"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/color_button"
            android:text="@string/resume_game"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/board"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:layout_centerHorizontal="true"
            android:background="@color/fon"
            android:gravity="center"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:backgroundTint="@color/fon"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/playAgain"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/resume"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/color_button"
            android:text="@string/game_over_n_play_again"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center">

            <Button
                android:id="@+id/up"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/color_button"
                android:gravity="center"
                android:text="@string/up"
                android:textColor="@android:color/white"
                app:cornerRadius="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/left"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_button"
                android:gravity="center"
                android:text="@string/left"
                android:textColor="@android:color/white"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/down"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_button"
                android:gravity="center"
                android:text="@string/down"
                android:textColor="@android:color/white"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/right"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/color_button"
                android:gravity="center"
                android:text="@string/right"
                android:textColor="@android:color/white"
                app:cornerRadius="50dp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img" />


</androidx.constraintlayout.widget.ConstraintLayout>